MobTalkerScript/src/mobtalkerscript/mts/v2/parser/MtsParser.java
// Generated from C:\Users\Tobsen\Desktop\Minecraft\MobTalker2\MobTalkerScript\MobTalkerScript\src\mobtalkerscript\mts\v1\parser\Mts.g4 by ANTLR 4.1
package mobtalkerscript.mts.v2.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MtsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LOCAL=2, FUNCTION=3, LABEL=4, JUMP=5, CALL=6, RETURN=7, END=8, DO=9, 
		IF=10, THEN=11, ELSEIF=12, ELSE=13, WHILE=14, BREAK=15, REPEAT=16, UNTIL=17, 
		FOR=18, IN=19, CMD_SAY=20, CMD_SHOW=21, CMD_AT=22, CMD_OFFSET=23, CMD_SCENE=24, 
		CMD_HIDE=25, CMD_MENU=26, CMD_OPTION=27, VARIABLE_KEY=28, LPAREN=29, RPAREN=30, 
		LBRACE=31, RBRACE=32, LBRACK=33, RBRACK=34, SEMI=35, COMMA=36, DOT=37, 
		ASSIGN=38, GT=39, LT=40, NOT=41, EQUAL=42, LE=43, GE=44, NOTEQUAL=45, 
		AND=46, OR=47, ADD=48, SUB=49, MUL=50, DIV=51, MOD=52, CONCAT=53, LineComment=54, 
		BlockComment=55, NullLiteral=56, BooleanLiteral=57, StringLiteral=58, 
		Identifier=59, NumberLiteral=60;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'local'", "'function'", "'label'", "'jump'", "'call'", 
		"'return'", "'end'", "'do'", "'if'", "'then'", "'else if'", "'else'", 
		"'while'", "'break'", "'repeat'", "'until'", "'for'", "'in'", "'say'", 
		"'show'", "'at'", "'offset'", "'scene'", "'hide'", "'menu'", "'option'", 
		"'$'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
		"'='", "'>'", "'<'", "'not'", "'=='", "'<='", "'>='", "'!='", "'and'", 
		"'or'", "'+'", "'-'", "'*'", "'/'", "'%'", "'..'", "LineComment", "BlockComment", 
		"'nil'", "BooleanLiteral", "StringLiteral", "Identifier", "NumberLiteral"
	};
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_loopBlock = 2, RULE_stmt = 3, RULE_expr = 4, 
		RULE_literalExpr = 5, RULE_numericForControl = 6, RULE_genericForControl = 7, 
		RULE_tableCtorExpr = 8, RULE_fieldDefExpr = 9, RULE_assignmentExpr = 10, 
		RULE_accessExpr = 11, RULE_callExpr = 12, RULE_tableExpr = 13, RULE_tableFieldAccess = 14, 
		RULE_commandStmt = 15, RULE_commandMenuOption = 16, RULE_exprStmt = 17, 
		RULE_returnStmt = 18, RULE_breakStmt = 19, RULE_funcDecl = 20, RULE_labelDecl = 21;
	public static final String[] ruleNames = {
		"chunk", "block", "loopBlock", "stmt", "expr", "literalExpr", "numericForControl", 
		"genericForControl", "tableCtorExpr", "fieldDefExpr", "assignmentExpr", 
		"accessExpr", "callExpr", "tableExpr", "tableFieldAccess", "commandStmt", 
		"commandMenuOption", "exprStmt", "returnStmt", "breakStmt", "funcDecl", 
		"labelDecl"
	};

	@Override
	public String getGrammarFileName() { return "Mts.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MtsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ChunkContext extends ParserRuleContext {
		public List<LabelDeclContext> labelDecl() {
			return getRuleContexts(LabelDeclContext.class);
		}
		public TerminalNode EOF() { return getToken(MtsParser.EOF, 0); }
		public LabelDeclContext labelDecl(int i) {
			return getRuleContext(LabelDeclContext.class,i);
		}
		public List<FuncDeclContext> funcDecl() {
			return getRuleContexts(FuncDeclContext.class);
		}
		public FuncDeclContext funcDecl(int i) {
			return getRuleContext(FuncDeclContext.class,i);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION || _la==LABEL) {
				{
				setState(46);
				switch (_input.LA(1)) {
				case LABEL:
					{
					setState(44); labelDecl();
					}
					break;
				case FUNCTION:
					{
					setState(45); funcDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ReturnStmtContext returnStmt(int i) {
			return getRuleContext(ReturnStmtContext.class,i);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<ReturnStmtContext> returnStmt() {
			return getRuleContexts(ReturnStmtContext.class);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(55);
				switch (_input.LA(1)) {
				case LOCAL:
				case JUMP:
				case CALL:
				case DO:
				case IF:
				case WHILE:
				case REPEAT:
				case FOR:
				case CMD_SAY:
				case CMD_SHOW:
				case CMD_SCENE:
				case CMD_HIDE:
				case CMD_MENU:
				case VARIABLE_KEY:
				case SEMI:
				case Identifier:
					{
					setState(53); stmt();
					}
					break;
				case RETURN:
					{
					setState(54); returnStmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopBlockContext extends ParserRuleContext {
		public ReturnStmtContext returnStmt(int i) {
			return getRuleContext(ReturnStmtContext.class,i);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<BreakStmtContext> breakStmt() {
			return getRuleContexts(BreakStmtContext.class);
		}
		public List<ReturnStmtContext> returnStmt() {
			return getRuleContexts(ReturnStmtContext.class);
		}
		public BreakStmtContext breakStmt(int i) {
			return getRuleContext(BreakStmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public LoopBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLoopBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopBlockContext loopBlock() throws RecognitionException {
		LoopBlockContext _localctx = new LoopBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loopBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(62);
				switch (_input.LA(1)) {
				case LOCAL:
				case JUMP:
				case CALL:
				case DO:
				case IF:
				case WHILE:
				case REPEAT:
				case FOR:
				case CMD_SAY:
				case CMD_SHOW:
				case CMD_SCENE:
				case CMD_HIDE:
				case CMD_MENU:
				case VARIABLE_KEY:
				case SEMI:
				case Identifier:
					{
					setState(59); stmt();
					}
					break;
				case RETURN:
					{
					setState(60); returnStmt();
					}
					break;
				case BREAK:
					{
					setState(61); breakStmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CommandContext extends StmtContext {
		public CommandStmtContext commandStmt() {
			return getRuleContext(CommandStmtContext.class,0);
		}
		public CommandContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatBlockContext extends StmtContext {
		public LoopBlockContext LoopBlock;
		public ExprContext Condition;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopBlockContext loopBlock() {
			return getRuleContext(LoopBlockContext.class,0);
		}
		public RepeatBlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitRepeatBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlankStatementContext extends StmtContext {
		public BlankStatementContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBlankStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallContext extends StmtContext {
		public Token FunctionName;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public CallContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileBlockContext extends StmtContext {
		public ExprContext Condition;
		public LoopBlockContext LoopBlock;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopBlockContext loopBlock() {
			return getRuleContext(LoopBlockContext.class,0);
		}
		public WhileBlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitWhileBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementContext extends StmtContext {
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public StatementContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumericForContext extends StmtContext {
		public NumericForControlContext Control;
		public LoopBlockContext LoopBlock;
		public NumericForControlContext numericForControl() {
			return getRuleContext(NumericForControlContext.class,0);
		}
		public LoopBlockContext loopBlock() {
			return getRuleContext(LoopBlockContext.class,0);
		}
		public NumericForContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitNumericFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JumpContext extends StmtContext {
		public Token LabelName;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public JumpContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitJump(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoBlockContext extends StmtContext {
		public BlockContext Block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DoBlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitDoBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfElseBlockContext extends StmtContext {
		public ExprContext expr;
		public List<ExprContext> Condition = new ArrayList<ExprContext>();
		public BlockContext block;
		public List<BlockContext> ThenBlock = new ArrayList<BlockContext>();
		public BlockContext ElseBlock;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public IfElseBlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitIfElseBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GenericForContext extends StmtContext {
		public GenericForControlContext Control;
		public LoopBlockContext LoopBlock;
		public GenericForControlContext genericForControl() {
			return getRuleContext(GenericForControlContext.class,0);
		}
		public LoopBlockContext loopBlock() {
			return getRuleContext(LoopBlockContext.class,0);
		}
		public GenericForContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitGenericFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		int _la;
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new JumpContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66); match(JUMP);
				setState(67); ((JumpContext)_localctx).LabelName = match(Identifier);
				}
				break;

			case 2:
				_localctx = new CallContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68); match(CALL);
				setState(69); ((CallContext)_localctx).FunctionName = match(Identifier);
				}
				break;

			case 3:
				_localctx = new DoBlockContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(70); match(DO);
				setState(72);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0)) {
					{
					setState(71); ((DoBlockContext)_localctx).Block = block();
					}
				}

				setState(74); match(END);
				}
				break;

			case 4:
				_localctx = new WhileBlockContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(75); match(WHILE);
				setState(76); ((WhileBlockContext)_localctx).Condition = expr(0);
				setState(77); match(DO);
				setState(79);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0)) {
					{
					setState(78); ((WhileBlockContext)_localctx).LoopBlock = loopBlock();
					}
				}

				setState(81); match(END);
				}
				break;

			case 5:
				_localctx = new NumericForContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(83); match(FOR);
				setState(84); ((NumericForContext)_localctx).Control = numericForControl();
				setState(85); match(DO);
				setState(87);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0)) {
					{
					setState(86); ((NumericForContext)_localctx).LoopBlock = loopBlock();
					}
				}

				setState(89); match(END);
				}
				break;

			case 6:
				_localctx = new GenericForContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(91); match(FOR);
				setState(92); ((GenericForContext)_localctx).Control = genericForControl();
				setState(93); match(DO);
				setState(95);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0)) {
					{
					setState(94); ((GenericForContext)_localctx).LoopBlock = loopBlock();
					}
				}

				setState(97); match(END);
				}
				break;

			case 7:
				_localctx = new RepeatBlockContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(99); match(REPEAT);
				setState(101);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0)) {
					{
					setState(100); ((RepeatBlockContext)_localctx).LoopBlock = loopBlock();
					}
				}

				setState(103); match(UNTIL);
				setState(104); ((RepeatBlockContext)_localctx).Condition = expr(0);
				setState(105); match(SEMI);
				}
				break;

			case 8:
				_localctx = new IfElseBlockContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				{
				setState(107); match(IF);
				setState(108); ((IfElseBlockContext)_localctx).expr = expr(0);
				((IfElseBlockContext)_localctx).Condition.add(((IfElseBlockContext)_localctx).expr);
				setState(109); match(THEN);
				setState(111);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << JUMP) | (1L << CALL) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << VARIABLE_KEY) | (1L << SEMI) | (1L << Identifier))) != 0)) {
					{
					setState(110); ((IfElseBlockContext)_localctx).block = block();
					((IfElseBlockContext)_localctx).ThenBlock.add(((IfElseBlockContext)_localctx).block);
					}
				}
